--- a/package.json
+++ b/package.json
@@ -14,9 +14,31 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@mdx-js/mdx": "^1.5.8",
+    "@mdx-js/react": "^1.5.8",
     "gatsby": "^2.20.12",
+    "gatsby-image": "^2.3.2",
+    "gatsby-plugin-emotion": "^4.2.1",
+    "gatsby-plugin-mdx": "^1.1.7",
+    "gatsby-plugin-sharp": "^2.5.4",
+    "gatsby-plugin-typography": "^2.4.1",
+    "gatsby-remark-images": "^3.2.2",
+    "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-transformer-remark": "^2.7.1",
+    "gatsby-transformer-sharp": "^2.4.4",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-typography": "^0.16.19",
+    "typography": "^0.16.19",
+    "typography-theme-doelger": "^0.16.19",
+    "typography-theme-funston": "^0.16.19",
+    "typography-theme-irving": "^0.16.19",
+    "typography-theme-kirkham": "^0.16.19",
+    "typography-theme-lawton": "^0.16.19",
+    "typography-theme-noriega": "^0.16.19",
+    "typography-theme-stow-lake": "^0.16.19",
+    "typography-theme-twin-peaks": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
