--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "gatsby-plugin-sharp": "^2.6.0",
     "gatsby-plugin-typography": "^2.5.0",
     "gatsby-remark-images": "^3.3.0",
+    "gatsby-remark-katex": "^3.3.1",
     "gatsby-remark-relative-images": "^0.3.0",
     "gatsby-source-filesystem": "^2.3.0",
-    "gatsby-transformer-remark": "^2.8.4",
+    "gatsby-transformer-remark": "^2.8.7",
     "gatsby-transformer-sharp": "^2.5.0",
+    "katex": "^0.11.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-typography": "^0.16.19",
